--- a/ureport/templates/ureport/partials/numeric_polls.html
+++ b/ureport/templates/ureport/partials/numeric_polls.html
@@ -1,5 +1,5 @@
 <div id="poll_list">
-    {% if all_polls %}
+    {% if polls %}
         <table width="100%">
             <thead>
             <tr>
@@ -9,7 +9,7 @@
                 <td></td>
             </tr>
             </thead>
-            {% for poll in all_polls %}
+            {% for poll in polls %}
 
                 <tr>
                     <td>{{ poll.name }}</td>
