fixes to bar chart

--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -61,6 +61,14 @@
 
     </div>
 
+    <div id="map_legend" style="display:none;">
+    <h3>Key</h3>
+    <table>
+
+
+    </table>
+    </div>
+
 {% endblock %}
 
 
