--- a/ureport/templates/ureport/tag_cloud.html
+++ b/ureport/templates/ureport/tag_cloud.html
@@ -18,7 +18,7 @@
     <div class="module">
         <h2>Polls</h2>
 
-        <div id="polls">
+        <div id="poll_list" class="freeform">
 
         </div>
 
@@ -30,8 +30,9 @@
 {% block right %}
     <div class="module">
         <h2>Tag Cloud</h2>
-
-        <div id="tag_cloud">
+             <div id="visual">
+        <div id="tags">
         </div>
+                 </div>
     </div>
 {% endblock %}
