--- a/ureport/templates/ureport/index.html
+++ b/ureport/templates/ureport/index.html
@@ -1,35 +1,7 @@
-{% extends "layout-split-2.html" %}
-{% block title %}
-    Ureport - {{ block.super }}
+{% extends "layout.html" %}
+
+{% block content %}
+<h3>uReport</h3>
+Welcome to uReport, UNICEF and Uganda Boy Scouts' SMS-based polling system.
+Login or click a tab to explore!
 {% endblock %}
-{% block stylesheets %}
-     {{ block.super }}
-<link type="text/css" rel="stylesheet"
-      href="{{MEDIA_URL}}ureport/css/ureport.css" />
-{% endblock %}
-{% block javascripts %}
-    {{ block.super }}
-     <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
-{% endblock %}
-
-
-
-{% block left %}
-    <div class="module">
-        <h2>Polls</h2>
-     <div id="polls">
-
-        </div>
-
-    </div>
-
-{% endblock %}
-
-
-{% block right %}
-    <div class="module">
-        <h2>Tag Cloud</h2>
-    <div id="tag_cloud">
-        </div>
-    </div>
-{%  endblock %}
