tag to lower,map zoom fix,category fix

--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -93,7 +93,7 @@
                        </ul>
                           </div>
         <div id="visual">
-            <div id="map" style="display:none;" >
+            <div id="map" class="init" style="display:none;" >
 
             </div>
 
