--- a/ureport/static/css/ureport.css
+++ b/ureport/static/css/ureport.css
@@ -81,9 +81,13 @@ font-family:tahoma,arial,sans-serif;
 #tags p>a{
     color: #aad0d4;
 }
+.module   ul{
+
+    display:inline;
+}
 .module   ul li{
 
-    float:left;
+    float:right;
 
 }
 .module   ul li img{
