minor fixes to UI

--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -39,8 +39,8 @@
                     <th >Name</th>
                     <th >Question</th>
                     <th style="width:110px;">Start Date</th>
-                    <th>#Participants</th>
-                    <th style="width:210px;">Reports</th>
+                    <th style="width:50px">#Participants</th>
+                    <th style="width:230px;">Reports</th>
                     <th style="width:140px;">Visuals</th>
                 </tr>
                 </thead>
