dashboard wording change

--- a/ureport/templates/ureport/index.html
+++ b/ureport/templates/ureport/index.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 <h3>uReport</h3>
-Welcome to uReport, UNICEF and Uganda Boy Scouts' SMS-based polling system.
-Login or click a tab to explore!
+<span style="font-size:14px">
+Welcome to uReport, Uganda's SMS-based polling system for monitoring what's happening
+on the ground in communities across the country. Login or click a tab to explore!
+</span>
 {% endblock %}
