fixes to map legend

--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -124,6 +124,8 @@
         </div>
         <div id="map_legend" style="display:none;">
             <h3>Key</h3>
+            <table>
+            </table>
         </div>
     </div>
 {% endblock %}
