show tag cloud loading indicator

--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -21,6 +21,7 @@
         var minLon={{minLon}};
         var maxLon={{maxLon}};
         var zoom=9;
+		var tag_poll_pk;
     </script>
 {% endblock %}
 
