--- a/ureport/templates/ureport/partials/ignored_tags.html
+++ b/ureport/templates/ureport/partials/ignored_tags.html
@@ -10,6 +10,7 @@
       function back()
       {
    $('#excluded').remove();
-  load_tag_cloud();
+   console.log(tag_poll_pk);
+  load_tag_cloud(tag_poll_pk);
       }
   </script>
