--- a/ureport/templates/ureport/partials/freeform_polls.html
+++ b/ureport/templates/ureport/partials/freeform_polls.html
@@ -4,7 +4,7 @@
         <thead><tr><td>Poll</td><td>Number Of Responses</td><td></td></tr></thead>
     {%  for poll in polls %}
 
-            <tr><td>{{poll.name}}</td><td>{{ poll.responses.count }}</td><td><input  type="checkbox"  onClick="load_tag_cloud()"    id="{{ poll.pk }}" name="""/> </td></tr>
+            <tr><td>{{poll.name}}</td><td>{{ poll.responses.count }}</td><td><input  type="checkbox"  onClick="load_tag_cloud(tag_poll_pk)"    id="{{ poll.pk }}" name="""/> </td></tr>
 
 
 
