--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -113,7 +113,7 @@
                 </div>
                 <div style="width:100%;height:600px;display:none;" id="pie">
                 </div>
-                <div id="tags" style="display:none;">
+                <div id="tags" style="display:none;width:50%;margin:auto;">
                 </div>
                 <div id="histogram" style="display:none;">
                 </div>
