added question to map

--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -125,7 +125,9 @@
         </div>
         <div id="map_legend" style="display:none;">
             <h3>Key</h3>
-            <table>
+            <table class="key" border=0 style="float:left;max-width:30%;">
+            </table>
+             <table class="qn" style="margin-left:10px;border:none;">
             </table>
         </div>
     </div>
