question on tagcloud

--- a/ureport/templates/ureport/tag_cloud.html
+++ b/ureport/templates/ureport/tag_cloud.html
@@ -31,7 +31,7 @@
     <div class="module">
         <h2>Tag Cloud</h2>
              <div id="visual">
-        <div id="tags">
+        <div id="tags" style="width:50%;margin:auto;">
         </div>
 
                  </div>
