--- a/ureport/templates/ureport/message_history.html
+++ b/ureport/templates/ureport/message_history.html
@@ -13,25 +13,19 @@
     <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
 {% endblock %}
 {% block content %}
-{% comment %}
-<input type="hidden" name="csrf_token" value="{{ csrf_token|escapejs }}" />
-{% endcomment %}
-	<div id="msg_history">
-        <h2 style="white-space:normal">
-            Messaging History for 
-            {% if connection.contact %}
-            	<span class="message_history_contact">{{ connection.contact }}</span><br />
-            	<span class="message_history_stats">Latest Message: {{ stats_latest_message|truncatewords:20 }}</span><br />
-            	<span class="message_history_stats">Total Outgoing Messages: {{ stats_total_outgoing }}</span><br />
-            	<span class="message_history_stats">Total Incoming Messages: {{ stats_total_incoming }}</span>
-            {% else %}
-            	<span class="message_history_contact">Annonymous</span>
-            {% endif %}
+	<div class="module">
+        <h2 style="white-space:normal">Messaging History for <span class="message_history_contact">{{ connection.contact }}</span>
             <img id="collapse_img" style="float:right" src="{{ MEDIA_URL }}rapidsms/icons/silk/section_expanded--bright.png" onclick="collapse()"/>
             <img id="expand_img" style="float:right;display:none" src="{{ MEDIA_URL }}rapidsms/icons/silk/section_collapsed--bright.png" onclick="expand()"/>            
         </h2>
-        <br />
-        <div id="accordion">
+    </div>
+    <div class="message_history"><br />
+    <span class="message_history_stats">
+    Latest Message: {{ stats_latest_message.text|truncatewords:15 }} - received on: {{ stats_latest_message.date|date:"D d M Y H:i:s A" }}<br />
+    Total Outgoing Messages: {{ stats_total_outgoing }}<br />
+    Total Incoming Messages: {{ stats_total_incoming }}</span>
+    <p>&nbsp;</p>
+    <div id="accordion">
 	{% for msg in messages %}
 		{% ifequal msg.direction "I" %}
 			<h3><a href="#"><img id="collapse_img" style="float:left" src="{{ MEDIA_URL }}rapidsms/icons/silk/phone.png" />
