--- a/ureport/templates/ureport/message_history.html
+++ b/ureport/templates/ureport/message_history.html
@@ -28,7 +28,7 @@
     <div id="accordion">
 	{% for msg in messages %}
 		{% ifequal msg.direction "I" %}
-			<h3><a href="#"><img id="collapse_img" style="float:left" src="{{ MEDIA_URL }}rapidsms/icons/silk/phone.png" />
+			<h3><a href="#"><img style="float:left" src="{{ MEDIA_URL }}rapidsms/icons/silk/phone.png" border="0" />
 						{% for key, direction in direction_choices %} 
 						{% ifequal key msg.direction %} <span class="message_history_incoming"> &raquo;&raquo; </span> {% endifequal %}
 						{% endfor %} 
@@ -77,7 +77,7 @@
 			</div>
 		{% else %}
 			{% if not msg.in_response_to %}
-				<h3><a href="#"><img id="collapse_img" style="float:left" src="{{ MEDIA_URL }}rapidsms/icons/silk/phone.png" />
+				<h3><a href="#"><img style="float:left" src="{{ MEDIA_URL }}rapidsms/icons/silk/phone.png" />
 							{% for key, direction in direction_choices %} 
 							{% ifequal key msg.direction %}<span class="message_history_outgoing"> &laquo;&laquo; </span>{% endifequal %}
 							{% endfor %} 
