--- a/ureport/templates/ureport/contacts_base.html
+++ b/ureport/templates/ureport/contacts_base.html
@@ -2,6 +2,7 @@
 {% block stylesheets %}
     {{ block.super }}
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.css" />
+    <script src="{{MEDIA_URL}}ureport/javascripts/jquery-ui.js" type="text/javascript"></script>
 {% endblock %}
 {% block javascripts %}
     {{ block.super }}
