--- a/ureport/templates/ureport/partials/contacts_row.html
+++ b/ureport/templates/ureport/partials/contacts_row.html
@@ -1,5 +1,6 @@
 {% extends 'generic/partials/partial_row.html' %}
 {% block remaining_row_content %}
+    <td>{{ object.name }}</td>
     <td>{{ object.default_connection.identity }}</td>
     <td id="row_{{ object.pk }}">{{ object.reporting_location.name }}</td>
     <td>
@@ -13,11 +14,11 @@
     <td>0</td>
     <td class="button_col">
     <div class="buttons">
-            <a href="javascript:void(0)" onclick="deleteReporter('{{ object.pk }}','{{ object.name }}')">
+            <a href="javascript:void(0)" onclick="deleteReporter(this, {{ object.pk }},'{{ object.name }}')">
                 <img src="{{ MEDIA_URL }}rapidsms/icons/silk/delete.png" />
             </a>
 
-             <a href="javascript:void(0)" onclick="editReporter('{{ object.pk }}')">
+             <a href="javascript:void(0)" onclick="editReporter(this, {{ object.pk }})">
                 <img src="{{ MEDIA_URL }}poll/icons/silk/pencil.png" />
             </a>
         </div>
