--- a/ureport/templates/ureport/contacts_base.html
+++ b/ureport/templates/ureport/contacts_base.html
@@ -1,4 +1,7 @@
 {% extends "generic/base.html" %}
+{% block title %}
+    uReporters - {{ block.super }}
+{% endblock %}
 {% block stylesheets %}
     {{ block.super }}
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.css" />
