--- a/ureport/templates/ureport/partials/edit_reporter.html
+++ b/ureport/templates/ureport/partials/edit_reporter.html
@@ -18,7 +18,7 @@
         {{ reporter_form.groups.errors }}
     {% endif %}
 </td>
-<td>0</td>
+<td>{{ reporter.responses.count }}</td>
 <td class="button_col">
     <div class="buttons">
         <a href="javascript:void(0)"
